--- a/views/service/profile.html
+++ b/views/service/profile.html
@@ -96,7 +96,8 @@
  CONTROLS  
 ---------------------------------------------------------------------------->              
      
-<script type="text/javascript">
+<script src="/scripts/mustache.js" nonce="{{ noncevalue }}"></script>         
+<script type="text/javascript" nonce="{{ noncevalue }}">
     (function() { 
         let hello = Line_Firebase.hello();
                 
