--- a/views/service/settings.html
+++ b/views/service/settings.html
@@ -110,8 +110,8 @@
 <!-------------------------------------------------------------------------- 
  CONTROLS  
 ---------------------------------------------------------------------------->     
-<script src="/scripts/mustache.js"></script>         
-<script type="text/javascript">
+<script src="/scripts/mustache.js" nonce="{{ noncevalue }}"></script>         
+<script type="text/javascript" nonce="{{ noncevalue }}">
     (function() { 
         let hello = Line_Firebase.hello();
         Mustache.parse($('#tmp-app-item').html(), [ '{%', '%}' ] );
