--- a/views/template/view-template.html
+++ b/views/template/view-template.html
@@ -57,8 +57,8 @@
  CONTROLS  
 ---------------------------------------------------------------------------->              
 <!-- For client-side rendering -->
-<script src="/scripts/mustache.js"></script>         
-<script type="text/javascript">
+<script src="/scripts/mustache.js" nonce="{{ noncevalue }}"></script>         
+<script type="text/javascript" nonce="{{ noncevalue }}">
     (function() { 
         let hello = Line_Firebase.hello();
         Mustache.tags = [ '{%', '%}' ];
